--- a/build.yaml
+++ b/build.yaml
@@ -19,4 +19,9 @@
 #
 ---
 include:
-  - board: ferris_rev02
+  - board: nice_nano_v2
+    shield: ferris_go_left
+  - board: nice_nano_v2
+    shield: ferris_go_left
+  - board: nice_nano_v2
+    shield: settings_reset
