--- a/build.yaml
+++ b/build.yaml
@@ -22,6 +22,6 @@ include:
   - board: nice_nano_v2
     shield: ferris_go_left
   - board: nice_nano_v2
-    shield: ferris_go_left
+    shield: ferris_go_right
   - board: nice_nano_v2
     shield: settings_reset
